# json2wav

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
presets/: crash.json  crash2.json  hihatopen.json  kick.json  kick3.json  snaredrum.json  snaredrum3.json  snarenoise.json  snarenoise3.json  titebass2.json  titebass2_8vb.json  titechords2_17vox.json  titechords_17vox.json  titerhythm3_17vox.json  tom_83hz.json  tom_97hz.json
songs/: groovoove.json  hello.json
src/: AdditiveHitSynth.h  AirFilter.h  ArenaBumpAllocator.h  AudioFile.h  Bessel.cpp  Bessel.gen.cpp  Bessel.gen.h  Bessel.h  BesselPoly.h  Binomial.h  CachedArenaAllocator.h  ChebyDist.h  CircleQueue.h  CompositeSynth.h  Compressor.h  Cubic.h  DebugNew.cpp  DebugNew.h  Delay.h  DrumHit.cpp  DrumHit.gen.cpp  DrumHit.gen.h  DrumHit.h  DrumHitRT60.h  DrumHitSynth.h  DrumHitTypes.h  Envelope.h  EnveloperComposable.h  FDNVerb.h  Fader.h  FastSin.h  FastTan.h  Filter.h  FilterComposable.h  FourCC.h  GaussBoost.h  IAudioObject.h  IControlObject.h  InfiniSaw.cpp  InfiniSaw.gen.h  (+42 more)
